hard-gists/bf576ee091e75071bc66/run.log
=== Docker Run Log for bf576ee091e75071bc66 ===
Started at: Mi 29. Okt 19:41:36 CET 2025

[2025-10-29 19:41:36] START: Running container for bf576ee091e75071bc66
[2025-10-29 19:41:37] SUCCESS: Container d766dc461afb91b13133b5411af59d0ab8220dafc143e3a32233826db3527391 started for bf576ee091e75071bc66
=== Container logs for bf576ee091e75071bc66 ===
  File "/snippet.py", line 14
    print 'Usage: # python %s filename' % argvs[0]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for bf576ee091e75071bc66 ===
[2025-10-29 19:41:39] INFO: Container d766dc461afb91b13133b5411af59d0ab8220dafc143e3a32233826db3527391 has stopped
